docs: update README and clean up extension files

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -211,6 +211,16 @@
                 <small>The URL where your AI Proctor backend server is running</small>
             </div>
 
+            <div class="setting-group">
+                <label for="secretKey">Secret Key</label>
+                <input 
+                    type="password" 
+                    id="secretKey" 
+                    placeholder="Enter the connection secret key"
+                >
+                <small>The secret key required to connect to the backend</small>
+            </div>
+
             <div class="divider"></div>
 
             <div class="setting-group">
